force-app/main/default/objects/Int_Party_Feature__c/Int_Party_Feature__c.object-meta.xml
<CustomObject>
    <description>Int Party Feature</description>
    <label>Int Party Feature</label>
    <nameField>
        <displayFormat>PFI-{0000000000}</displayFormat>
        <label>Party Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>