force-app/main/default/objects/Int_Party_Feature__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Party Name</description>
    <label>Party Name</label>
    <referenceTo>Int_Party__c</referenceTo>
    <relationshipLabel>Int Party Features</relationshipLabel>
    <relationshipName>Int_Party_Features</relationshipName>
    <type>Lookup</type>
</CustomField>