force-app/main/default/objects/Int_Party_Feature__c/fields/Value_AlphaNumeric__c.field-meta.xml
<CustomField>
    <fullName>Value_AlphaNumeric__c</fullName>
    <description>Value AlphaNumeric</description>
    <label>Value AlphaNumeric</label>
    <length>255</length>
    <type>Text</type>
</CustomField>